minor modifications to smart card conversion procedure
git-svn-id: file:///srv/local/data/cleanRepo/trunk@32387 a0517364-e873-4167-b1c8-416daa5a6b91